scrollbar fix bug 2

--- a/Ranking/acessarRanking.css
+++ b/Ranking/acessarRanking.css
@@ -71,7 +71,7 @@ h1 {
     font-size: 30px;
     font-style: normal;
     font-weight: bold;
-    padding: 10px 10px;
+    overflow: auto;
 }
 input{
     font-family: Stardew;
@@ -98,4 +98,7 @@ th {
 th a {
     text-decoration: none;
     color: #EF9611;
+}
+li {
+    margin-right: 30px;
 }
